# HarTex-rust-discord-bot

./: Cargo.toml  README.md
lexical-core/: Cargo.toml  build.rs
lexical-core/src/: lib.rs
lexical-core/src/util/: mod.rs
src/: main.rs
src/command_system/: cfg.rs  command.rs  command_context.rs  error.rs  execution_handler.rs  framework.rs  mod.rs  precommand_check_parameters.rs
src/command_system/events/: emitter.rs  events.rs  listener.rs  mod.rs
src/command_system/parser/: arguments.rs  configuration.rs  mod.rs
src/command_system/precommand_checks/: bot_owner_only.rs  guild_is_already_setup.rs  guild_owner_only.rs  guild_text_channel_only.rs  has_role_permissions.rs  mod.rs  support_guild_only.rs
src/content_distribution_network/: mod.rs
src/logging/: log_level.rs  logger.rs  mod.rs
src/parsers/: emoji.rs  error.rs  mod.rs
src/plugins/: mod.rs
src/plugins/administrator/: mod.rs  webconfig_list.rs
src/plugins/general/: about.rs  help.rs  mod.rs  ping.rs  team.rs  uptime.rs
src/plugins/guild_owneronly/: mod.rs  setup.rs
src/plugins/information/: botinfo.rs  guildinfo.rs  mod.rs  userinfo.rs
src/plugins/infractions/: mod.rs  selfmute.rs
src/plugins/owneronly/: mod.rs  refresh_whitelist_roles.rs  restart.rs  stop.rs  supportannounce.rs  (+1 more)
src/system/: bot_configuration.rs  event_handler.rs  internal_bot_error.rs  mod.rs  whitelisting.rs
src/utilities/: mod.rs
src/xml_deserialization/: bot_config.rs  bot_customization.rs  dashboard.rs  dashboard_permission_level.rs  mod.rs  role_permission_level.rs  role_permission_levels.rs  user.rs
(+109 files in other folders)
